<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="generic_ok">OK</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_help">Help</string>
    <string name="generic_undo">Undo</string>
    <string name="generic_save">Save</string>
    <string name="generic_create">Create</string>
    <string name="generic_delete">Delete</string>
    <string name="generic_go">Go</string>
    <string name="generic_manage_card">Manage</string>
    <string name="generic_enable">Enable</string>
    <string name="generic_show_more">Show more</string>
    <string name="generic_no">No</string>
    <string name="generic_yes">Yes</string>
    <string name="generic_skip">Skip</string>
    <string name="generic_login">Login</string>
    <string name="generic_logout">Logout</string>
    <string name="generic_swipe_to_dismiss">Swipe to the side to remove this message</string>
    <string name="generic_runtime_permission_rejected">Permission rejected; You can manage permissions in the system settings</string>
    <string name="about_version">Version %s</string>
    <string name="about_contact_title">Help ressources</string>
    <string name="about_contact_mail">
        https://timelimit.io/en/#support
        \nhttps://timelimit.io/en/configsuggestions/
    </string>
    <string name="about_source_title">Source code</string>
    <string name="about_source_text" translatable="false">
        <a href="https://codeberg.org/timelimit/opentimelimit-android">https://codeberg.org/timelimit/opentimelimit-android</a>
    </string>
    <string name="about_contained_software_title">contained Software</string>
    <string name="about_contained_software_text" translatable="false">
        Kotlin Standard Library
        (<a href="https://github.com/JetBrains/kotlin/blob/master/license/LICENSE.txt">Apache License, Version 2.0</a>)
        \nKotlin Coroutines
        (<a href="https://github.com/JetBrains/kotlin/blob/master/license/LICENSE.txt">Apache License, Version 2.0</a>)
        \nAndroid X
        (<a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>)
        \nAndroid Navigation Component
        (<a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>)
        \nAndroid Room
        (<a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>)
        \nAndroid X Paging Library
        (<a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>)
        \n<a href="https://github.com/JakeWharton/ThreeTenABP">Three Ten Android Backport</a>
        (<a href="https://github.com/JakeWharton/ThreeTenABP/blob/master/LICENSE.txt">Apache License, Version 2.0</a>)
        \n<a href="https://github.com/jeremyh/jBCrypt">JBcrypt</a>
        (<a href="https://github.com/jeremyh/jBCrypt/blob/master/LICENSE">ISC license</a>)
        \n<a href="https://github.com/KeepSafe/TapTargetView">TapTargetView</a>
        (<a href="https://github.com/KeepSafe/TapTargetView/blob/master/LICENSE">Apache License, Version 2.0</a>
        \n<a href="https://github.com/google/flexbox-layout">Flexbox Layout</a>
        (<a href="https://github.com/google/flexbox-layout/blob/master/LICENSE">Apache License, Version 2.0</a>)
        \n<a href="https://github.com/square/okio">Okio</a>
        (<a href="https://github.com/square/okio/blob/master/LICENSE.txt">Apache License, Version 2.0</a>)
        \n<a href="https://github.com/signalapp/curve25519-java">curve25519-java</a>
        (<a href="https://github.com/signalapp/curve25519-java/blob/master/LICENSE">GNU General Public License v3.0</a>)
        \n<a href="https://github.com/zxing/zxing">ZXing</a>
        (<a href="https://github.com/zxing/zxing/blob/master/LICENSE">Apache License 2.0</a>)
    </string>
    <string name="about_diagnose_title">Error diagnose</string>
    <string name="about_diagnose_text">Tap here to access details which help diagnosing errors</string>
    <string name="about_developer_key_title">Developer PGP-Key fingerprint</string>
    <string name="about_developer_key_text" translatable="false">2E5C 672D E893 055D 04F5 B7BC 36B4 49FB 5364 BDC4</string>
    <string name="add_used_time_title">Add usage duration</string>
    <string name="add_used_time_title_with_category_title">Add usage duration for %s</string>
    <string name="add_used_time_description">This allows to add used time/ mark time as used
        in case it was used outside of TimeLimit, e.g. when you want to add telescreen usage
        to the used time
    </string>
    <string name="add_used_time_confirmation_toast">%1$s used time added for %2$s</string>
    <string name="add_user_title">Create user</string>
    <string name="add_user_hint_name">Name of the user</string>
    <string name="add_user_type_parent">Parent</string>
    <string name="add_user_type_child">Child</string>
    <string name="add_user_confirmation_done">User was created</string>
    <string name="add_user_child_password_info">If you chose a password for the child,
        then it can switch to its own user with its password.
        This is only useful if there are multiple child users.
        This feature is disabled if a child does not have a password.
    </string>
    <string name="add_user_authentication_required_text">
        Only parents may add users
    </string>
    <string name="add_user_authentication_required_btn">Authenticate</string>
    <string name="annoy_info">
        There was a manipulation of TimeLimit. Due to that, this device is locked now.
    </string>
    <string name="annoy_timer">
        The device can be unlocked in %s.
    </string>
    <string name="annoy_unlock_temp_button">Unlock for a moment</string>
    <string name="annoy_unlock_parent_button">Unlock a bit longer</string>
    <string name="annoy_reason">
        This was manipulated: %s
    </string>
    <string name="annoy_unlock_dialog_text">After unlocking, you should fix the cause for the blocking.
        Otherwise, the device will be locked again.
    </string>
    <string name="annoy_unlock_dialog_action">Unlock</string>
    <string name="authentication_required_overlay_title">Sign in to change settings</string>
    <string name="authentication_required_overlay_text">The settings will be locked again when you leave TimeLimit</string>
    <string name="backdoor_start_btn">Uninstall TimeLimit without password using the support</string>
    <string name="backdoor_intro_text">This feature is for the case that a confirmed bug locks you out.
        This is not for forgotten/wrongly noted passwords. Correct passwords that are not accepted are only
        a case for the feature if that is a confirmed/proven bug.
    </string>
    <string name="backdoor_intro_confirm">I understand</string>
    <string name="backdoor_instruction_1">Send the following nonce (with the reason for the unlocking) to the support to get a unlock code:</string>
    <string name="backdoor_instruction_2">Enter the received code:</string>
    <string name="backdoor_toast_invalid_code">This code is invalid</string>
    <string name="background_logic_whitelisted">in the internal whitelist</string>
    <string name="background_logic_temporarily_allowed">temporarily allowed</string>
    <string name="background_logic_limits_disabled">time limits disabled</string>
    <string name="background_logic_no_timelimit">no time limit</string>
    <string name="background_logic_idle_title">idle</string>
    <string name="background_logic_idle_text">no running App detected</string>
    <string name="background_logic_error">Error</string>
    <string name="background_logic_error_permission">missing permission</string>
    <string name="background_logic_error_internal">internal issue</string>
    <string name="background_logic_using_extra_time">Extra time (%s)</string>
    <string name="background_logic_opening_lockscreen">Opening lock screen</string>
    <string name="background_logic_permission_sanction_title">Missing permission</string>
    <string name="background_logic_permission_sanction_text">assuming that everything is used</string>
    <string name="background_logic_errpr_detailed_instanceid_sorting">There is an issue with
        the data in the usage stats database of your device.
        Due to that, TimeLimit can not reliable detect the running Apps.
        You can do nothing to solve this except waiting for four days or doing a reset of the whole device.
        Reinstalling TimeLimit does NOT help.
    </string>
    <string name="background_logic_temporarily_allowed_title">Apps are temporarily allowed</string>
    <string name="background_logic_temporarily_allowed_text">Tap here or turn screen off to undo</string>
    <string name="background_logic_timeout_title">auto logout enabled</string>
    <string name="background_logic_timeout_text">TimeLimit still runs to do that</string>
    <string name="background_logic_paused_title">Temporarily disabled</string>
    <string name="background_logic_paused_text">No limitations apply</string>
    <string name="background_logic_toast_sync_apps">TimeLimit: Failure while trying to update the app list</string>
    <string name="background_logic_toast_block_audio">TimeLimit: Music playback stopped (notification filter): %s</string>
    <string name="blocked_time_areas_copy_from">Copy from</string>
    <string name="day_of_week_monday">Monday</string>
    <string name="day_of_week_tuesday">Tuesday</string>
    <string name="day_of_week_wednesday">Wednesday</string>
    <string name="day_of_week_thursday">Thursday</string>
    <string name="day_of_week_friday">Friday</string>
    <string name="day_of_week_saturday">Saturday</string>
    <string name="day_of_week_sunday">Sunday</string>
    <string name="diagnose_clock_title">System clock</string>
    <string name="diagnose_connection_title">Connection status</string>
    <string name="diagnose_fga_title">Foreground-App-Detection</string>
    <string name="diagnose_exf_title">Experimental flags</string>
    <string name="diagnose_bat_title">Battery</string>
    <string name="diagnose_don_title">Device Owner Organization Name</string>
    <string name="diagnose_bg_task_loop_ex">Background task loop exception</string>
    <string name="diagnose_er_title">Exit Reasons</string>
    <string name="category_networks_title">Networks</string>
    <string name="category_networks_empty">You did not add any networks. This category does not depend on specific networks.</string>
    <string name="category_networks_status_missing_permission">The permission to get the connected network is missing</string>
    <string name="category_networks_status_none_connected">You are not connected to any WiFi network</string>
    <string name="category_networks_status_connected_no_match">You are connected to a network which was not added</string>
    <string name="category_networks_status_connected_no_match_full">You are connected to a network which was not added,
        but you can not add more networks to this category
    </string>
    <string name="category_networks_status_connected_has_match">You are connected to a network which was added</string>
    <string name="category_networks_action_add">Add network</string>
    <string name="category_networks_action_grant">Grant permission</string>
    <string name="category_networks_action_remove">Remove all networks</string>
    <string name="category_networks_type_allow_list">Block when not connected</string>
    <string name="category_networks_type_block_list">Block when connected</string>
    <string name="reset_hidden_hints_title">Reset hidden hints</string>
    <string name="reset_hidden_hints_description">You can chose to hide some messages. This allows to show these messages again.</string>
    <string name="reset_hidden_hints_not_possible">You did not hide any hints</string>
    <string name="reset_hidden_hints_btn">Show all hints again</string>
</resources>